feature: init kotlin compose multiplatforme